--- a/portfolio.css
+++ b/portfolio.css
@@ -26,7 +26,7 @@ nav{
     cursor: pointer;
 }
 span{
-    color: #a5eaff;
+    color: #55b3b3;
 }
 nav ul li{
     list-style-type: none;
@@ -86,7 +86,7 @@ h4{
     display: inline-block;
     width: 100%;
     padding: 14px 130px 14px 15px;
-    border: 2px solid #29caff;
+    border: 2px solid #ff5100;
     outline: none;
     border-radius: 30px;
 }.newslatter form input:last-child{
@@ -96,7 +96,7 @@ h4{
     border: none;
     padding: 10px 30px;
     border-radius: 30px;
-    background-color: #29caff;
+    background-color: #aa2200;
     color: white;
     box-shadow: 0px 0px 5px #000, 0px 0px 15px #858585;
     top: 6px;
@@ -129,21 +129,21 @@ h4{
     margin-bottom: 20px;
 }
 .about-text h5{
-    color: white;
+    color: rgb(167, 56, 56);
     letter-spacing: 2px;
     font-size: 22px;
     margin-bottom: 25px;
     text-transform: capitalize;
 }
 .about-text p{
-    color: #fcf;
+    color: rgb(255, 255, 255);
     letter-spacing: 1px;
     line-height: 28px;
     font-size: 18px;
     margin-bottom: 45px;
 }
 button{
-    background-color: #29caff;
+    background-color: #ff5100;
     color: white;
     text-decoration: none;
     border: 2px solid transparent;
@@ -154,7 +154,7 @@ button{
 }
 button:hover{
     background-color: transparent;
-    border: 2px solid #29caff;
+    border: 2px solid #0e1d22;
     cursor: pointer;
 }
 .service{
@@ -191,7 +191,7 @@ button:hover{
     display: block;
     text-align: center;
     margin: 25px 0px;
-    color: #29caff;
+    color: #ff5100;
 }
 h5{
     color: white;
@@ -205,7 +205,7 @@ h5{
     margin-bottom: 25px;
 }
 .card .button{
-    background-color: #29caff;
+    background-color: #ff5100;
     color: white;
     text-decoration: none;
     border: 2px solid transparent;
@@ -235,7 +235,7 @@ h5{
     margin-bottom: 25px;
 }
 .contact-me .button-two{
-    background-color: #29caff;
+    background-color: #ff5100;
     color: white;
     text-decoration: none;
     border: 2px solid transparent;
@@ -246,7 +246,7 @@ h5{
 }
 .contact-me .button-two:hover{
     background-color: transparent;
-    border: 2px solid #29caff;
+    border: 2px solid #206161;
     cursor: pointer;
 }
 footer{
@@ -280,7 +280,7 @@ footer p:nth-child(2){
     display: flex;
     align-items: center;
     justify-content: center;
-    background: #29caff;
+    background: #ff5100;
     border-radius: 50%;
     margin: 22px 10px;
     color: white;
